# ChangeLog for sys-devel/clang
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/clang/ChangeLog,v 1.115 2014/12/31 16:07:47 ago Exp $

  31 Dec 2014; Agostino Sarubbo <ago@gentoo.org> clang-3.5.0-r100.ebuild:
  Stable for ppc, wrt bug #530882

  28 Dec 2014; Agostino Sarubbo <ago@gentoo.org> clang-3.5.0-r100.ebuild:
  Stable for x86, wrt bug #530882

  27 Dec 2014; Agostino Sarubbo <ago@gentoo.org> clang-3.5.0-r100.ebuild:
  Stable for amd64, wrt bug #530882

  26 Nov 2014; Bernard Cafarelli <voyageur@gentoo.org> -clang-3.3.ebuild,
  -clang-3.4.1-r100.ebuild:
  Keep one major version for older releases

*clang-3.5.0-r100 (07 Sep 2014)

  07 Sep 2014; Michał Górny <mgorny@gentoo.org> +clang-3.5.0-r100.ebuild:
  Version bump, bug #522188.

*clang-3.4.2-r100 (23 Jun 2014)

  23 Jun 2014; Bernard Cafarelli <voyageur@gentoo.org>
  +clang-3.4.2-r100.ebuild:
  Version bump

  14 Jun 2014; Michał Górny <mgorny@gentoo.org> -clang-3.4-r100.ebuild:
  Drop old.

  06 Jun 2014; Jeroen Roovers <jer@gentoo.org> clang-3.0-r4.ebuild:
  Spelling (bug #512552).

*clang-3.4.1-r100 (09 May 2014)

  09 May 2014; Michał Górny <mgorny@gentoo.org> +clang-3.4.1-r100.ebuild:
  Version bump.

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> clang-3.2.ebuild,
  clang-3.3.ebuild, clang-9999.ebuild:
  Add support for the new PyPy slotting.

  23 Mar 2014; Agostino Sarubbo <ago@gentoo.org> clang-3.3-r100.ebuild:
  Stable for ppc, wrt bug #491018

  08 Mar 2014; Michał Górny <mgorny@gentoo.org> metadata.xml:
  Use "clang" as maintainer to help assigning bugs cleanly.

  05 Mar 2014; Markus Meier <maekke@gentoo.org> clang-3.3-r100.ebuild:
  arm stable, bug #491018

  01 Mar 2014; Pacho Ramos <pacho@gentoo.org> clang-3.3-r100.ebuild:
  amd64 stable, bug #491018

  23 Feb 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> clang-3.3-r100.ebuild:
  x86 stable wrt bug #491018

*clang-3.4-r100 (06 Jan 2014)
