@@ -40,25 +40,15 @@ EBUILD clang-3.1-r5.ebuild 6696 SHA256 4a4d884d8c37044fe7dc5f325e88f4733140997b3
 EBUILD clang-3.2.ebuild 6522 SHA256 795a7e1e2fbdb0f09cd02584cbe5e7a45c5da5351494d755750e649dfc822184 SHA512 a24728673c308f5cd66af9700d6a267fa4525b817d0b6c4d012d659dec0e44af7de149a7c9914051167b0e15bd27c28fc2e2313e1542a276bef41f086e305fde WHIRLPOOL 2b5c211f3bb799cd8226a018cbefe03b0eeab9c02561a30bff350ffdee3ac426e93a286881ba2123058e6e5ac1e06b6bf99015848c145c75c37c201d1db81c6f
 EBUILD clang-3.3-r100.ebuild 1245 SHA256 131ec94b63ca98b5bc7946ed7bbc653d1448f0be8094c5f04b25d56dad591589 SHA512 f963c85f35138cb95e0fab0c3c575d970855521e9d4855a774107a03762f2ce9723cbd0f54bd9f12f99505bc6b6e71599544c8afa14ee1118d76637b1ddb12de WHIRLPOOL c01519b962c25117cfebc59292738246f14eccac064da93a0772c809e32f11520b84d714bc4a56a37d136cf52ed2c2f2f62b444c36e0e780998c8423edbb8c85
 EBUILD clang-3.4.2-r100.ebuild 1253 SHA256 ab26bd84f4af9df8ecf2c1d33f7dc7b06ff87da24f8a961e09657bc308f43be1 SHA512 1be2f14b79ad90fc4f957fff7f9733416944750a79ad5989481c31d2f9e22465f4b6ec7ce22e7c30b9332dedd72780cf214c193c61f2770b3cf032ca01fa56b5 WHIRLPOOL ff1f69cd17ad1cf313a59f70890bc43881afe2cdd5e4c3a32a15c493e7da4240b09700665475d400f7eaa793562f4972eef2392cbb6b962bf58bf9d778bcae5d
-EBUILD clang-3.5.0-r100.ebuild 1245 SHA256 32bbc2948dd331e490ab75ba7a655389328a414f54e89a94cc746e497c4d8ce7 SHA512 e5938d4f14afdc482a7ef80046e9f9f55f24b63caf0ee65bcf52ac96390180d968bd6979b204d5a44d1a701e130c6b0aea955d291b9da042f8ca0909ff1dad46 WHIRLPOOL 25ef41b4e4e20ec006fd220561d8411d2f08d7a057b1fcb46bb2056560ba4386603430ccd912afb4723e2ac432821a085cf86241eb4a9b08bbe45eebac9353f4
+EBUILD clang-3.5.0-r100.ebuild 1247 SHA256 ba003508c0bf840b74f19dc3a82237efdab47be1e8883c109330ae2badcc0f35 SHA512 700ccbc21dc18045912f662a57f3fa585d6d3d1f18da6b6db1d5b19cfe9f980aaf650d22169906020c3d424d9c0ec5a0eb12eb690e380095a0bcb1269db06eda WHIRLPOOL 9345a2a047c4825d90a46643639ac343d5991449fcec971249ee092b35233c4bcc2c5319265664bf826514b9f0934532fa0baa6897e460bb20f8393e452ec7d1
 EBUILD clang-9999-r100.ebuild 1139 SHA256 d7d4078b16c78d7e0ab6bd91a3ad6e1c54f815439e14d4e41a2724b108e68d51 SHA512 6c4985c89701ff3550a84d1e9cce4fb14d494ef2f5a11c891f1802f42bc958df1e344965851a2b0ba40d60096bbaa2a848a8131a7ea39c0b660eb2d986bfaeb7 WHIRLPOOL a708b44763db1b505b9b390acb40463b1fdaba9d837567a7b125124bee9ef701f6d219a27825bb35ffd937ff7751aa9d2c518c7ec0f155c126ea62281a0e1d25
 EBUILD clang-9999.ebuild 5992 SHA256 ccd346a9e3a61aabefb861eb81cbceafbda9fc96ee50e1a1d685b62c79c269c7 SHA512 42666495c287cec9b86b0cc213efa4f7d945df38ac2159b33684a73543f0138455903f6fa861822fdea1099616dfb83975d0cea220e93f38fb4f7329232ccc25 WHIRLPOOL 964fbdce41fb19711d1435356da996022f0d69f62799c29a77b202d63f0ef5eaa4eb2270052c0525aae7e8b4a3e57e4bfaec57ee67642bdfc55796aa941fa5d4
-MISC ChangeLog 21210 SHA256 7e9775d764df62122a79745559615f2997f9c2d3a80bf34f3fe28f0ad561672b SHA512 9ad53117bddaae4d024eb783478b2d1352eab9990f5ec0b78c1a17d7a22c8b3befd0fb375480767ed7605cd156d7bcb7db6ca2ce15510c7b91b5f15ce3702b8b WHIRLPOOL b699d5ab379201d02cf514a522bdcb019efb8190e0e7055ebd38cc03a4dc1c012de7c56d197442dfccc54194bedb1b219966276e2d79855b5e135783a8be36cf
+MISC ChangeLog 21313 SHA256 79856f61ba9981d89941dc75aa3083452f87d6a5ff2878a2eb717def5fee47d2 SHA512 3de8958b1665fa346d20dcfa63d628c3f238abaab7e1934fc4a5eec651a1f4076f5fef2228ae45055ccdefdcf29136c26135bf329109a5db4c55db7a6b1517c0 WHIRLPOOL 94456c2685fdf9a3f09508072ead264af356e0b170b1242fe182c59485f7b9945780ec41ff2d3e914d9d41c57cb3397d11f7109aa2ef1ab49303d4a1251c5cb2
 MISC metadata.xml 1347 SHA256 ac44c316696ae0c3b3b10dd9b1529e4bad85b0a3d5f6ac2b0ec6b657f559451c SHA512 faf5c07813f2556cdca2967741dc68ad53d56584bf1570fd2d25289b889f9ce3c4fe503b7b0a7f0f2145f6244c7ae33ad0e7b24762c5de2794b1c7d565f36968 WHIRLPOOL 3fcc87924c756e6ffe507caacc112b7a1507bdd5dca1cc2e4f5b3251d9f34fd6bdfb28c76ada06ecf58abea8be5b41e19cf2d412e4b84c68b508e2d0758e008b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUpB9UAAoJELp701BxlEWfgmoP/3Ck/Oqjff4sODZT3W+izDFt
-bxQQRG+QVY/trC+Hhq/KIrRf3PNY1TNzcG7BK8olWWnKjpSM8eumME9Fmb4soF/x
-fjRVISOlPcl19xzV9lwYmc+Fr1WiHhSEc8FHqAZkZg1rQCJ3dc4wWbIRI0Ebu5/Z
-XzLy+b8Yhi7IUGQ8+i5AqAtqwDX4qxyx2YFayo/gjw2dPMbzFQfjbmZxoJXxxwr+
-AspAUkerIdxZLSn539yEWS+DMCqvMMY3kGw4s+UTceC33bmvOE4Yxk7EuFRVpCAc
-+uKTbBjhdVYHMv0+eWlT30c1Vx+300BUjKwAtMQGBJX8/TXK62775oiA1keXZSqE
-eC8/wsbDwlbcRCcf6n3Bav502oZGGig1WZUQFByWYF8oPEhQyqkPmmImrgc6fa+A
-TRBd0gAxScQEDfeaLS3kgL4LjSi3dN4tVsSlUQd2IEl0yq9uJ5ddooIlNrYpsID0
-q/UFaE1DMev77js/ZRu9/2dn7qtC59cKcIVAhWRo8BfqpU1HgV7HA1BuJqyfPNxV
-ZQkFgqDD+TLEsRy+8DAAGoHFgmHyYlW22hkcpMyIRtVGnzk6yhhpuXGDO9Qdciv+
-tBep9hNRUdlJypAQYlV/EberyEPbJVpkEYNNkx3YfXTVr9IUyuT0LGxf7Cv0IggL
-4cwH8y8Vugbzb69vHBUA
-=2CXS
+iEYEAREIAAYFAlSls6cACgkQkKaRLQcq0GIr/QCeLgqqMv4/A+1f6WFFFRX9EPjX
+tdQAnjXXwSQUdKSXgLAtnFvFWNb0lMlL
+=l/0n
 -----END PGP SIGNATURE-----
