@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/clang/clang-3.5.0-r100.ebuild,v 1.4 2014/12/31 16:07:47 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/clang/clang-3.5.0-r100.ebuild,v 1.5 2015/01/01 20:52:48 maekke Exp $
 
 EAPI=5
 
@@ -12,7 +12,7 @@ SRC_URI=""
 
 LICENSE="UoI-NCSA"
 SLOT="0/3.5"
-KEYWORDS="amd64 ~arm ppc x86 ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos"
+KEYWORDS="amd64 arm ppc x86 ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos"
 IUSE="debug multitarget python +static-analyzer"
 
 RDEPEND="~sys-devel/llvm-${PV}[clang(-),debug=,multitarget?,python?,static-analyzer,${MULTILIB_USEDEP}]"
