@@ -66,24 +66,14 @@ EBUILD llvm-3.1-r2.ebuild 6033 SHA256 9b9a587d30419fa646764a96e12fc6272f73f72461
 EBUILD llvm-3.2.ebuild 6534 SHA256 eb16cc91887fdb035722d268caaa3e4843825403786fcf74643be2c6f8099f11 SHA512 e781a4e4416a4acee667029744dab7f8e52022df4fcbb89d4d9acf855549f1c0a1661b79ee0067fd052a36bad278f08a2ff7f6e6e44d8c3ea7f82910ac573d9b WHIRLPOOL 115d13959a22867266dd7c0133109ccba063e97972cc2c807fb7a6dd7d3fbef1726caf314e262f6683a97a2c3a6ff776f808de7d80923472fc692554eccbca27
 EBUILD llvm-3.3-r3.ebuild 14190 SHA256 d16d933d6791ef7dbe08aa43340bb9924e063af11fa9e13ca8230509240d2c15 SHA512 c986e970f489f7ff79188043db397383e3c567735c8f4a1e8a13b89ef6a3a9f4b8550218444eadd04ef3a14143ab05dc839b3dbe935128f5437157d3aaec02cf WHIRLPOOL 910f7d65902548270835371a5076c746534c0b57487fb8fb149a893454e86e942beed284d6b7491cfb2f043a6e19554f97aec829067938192e75f64bd0fd7a7c
 EBUILD llvm-3.4.2.ebuild 15628 SHA256 f20ecd20046059e2b3b3fa18cec3cf7ed22269d814b640a56756d70c7de39df1 SHA512 9a9185d9d24e3304e7664dd7e719a2fd9cd6e160b7b97be2e473c0867f40de7733e8ccc574d15c1d0b7ee7b314c62afa88cf45ec5bd344ba78ed391509f38bc9 WHIRLPOOL 3c60b96db4a79197c47746c43e43427320612792f61f5358256eddd4988a36b50cf3f26be6b0e88f866c8bba0f31a792ad9711b5ba07ec6ba98264a832057e89
-EBUILD llvm-3.5.0.ebuild 15102 SHA256 68c144936fa92e6179cb82e8bb526e3a26a46c53cef6a2c8091ef0755fca7041 SHA512 739928c87a0c2973ab7143e1f74bd122bed8b13e5a074cd1aa382710c968bd106549a76e5ac50dcea18cd5ccc68ac90d70906668baf3a26e17be176d9ca9a597 WHIRLPOOL e3b77d0f85440b6e5a51b9c554dbe823e3319490a6438579803b483f78d37c3e6bd83bff5bdc9a6aded69eeb11ef9551eaa56b48431e41e91a6e7d0653e06274
+EBUILD llvm-3.5.0.ebuild 15104 SHA256 f3f8698353f9c5d2c9e28ade63b4573e6efb5cbace7da0ee400cfcd7e3e486b6 SHA512 a3434a4ef8050300f9e7309e35693c0b928bb5b438d95c54cf76298f29669b16466711f341ef0d37a3b6817342667f18130d106a2e839fcac0855a0db519758a WHIRLPOOL 4f662cdf9fb8b53d17c6c958b9734e91a7d085bcba0d7ad32c8a21e079adc57f62ef925ae1d1016e1642452e62d2cba1e8a9e39241d783cca8baad43bf9045e5
 EBUILD llvm-9999.ebuild 13914 SHA256 96c731cfe077bec0da28a5dc82179e6e70bda7fc77c8c25ed4d64eca845738f8 SHA512 ed6a18ae0a1c59c3327d118d478a03e4a73953d9a5a3b2c0953ce80076f2d07db9e83e078a7af00e094191d2dc1c3372640340a63ccb7bac77a9756f679c5f98 WHIRLPOOL e70e3977d37f1dcbda3541f028c1d45065453f23ec280bba2aaab69386f390a2a2fea5cbfc7050ae16ef5beb0ff3336839e988b6cf8d95235097713d627fba8b
-MISC ChangeLog 36353 SHA256 30703486d691491e889546357fe55d402c1347f1f838858328aeb5d160fb4551 SHA512 a24bb3cfe80ac9ef9505044e893353ae3c63514c86bad5f5696839483b21188ae543e0432e8e0a32f1aec977fb5ffc5b2aee21242e14f73318c6717fd449e7c2 WHIRLPOOL 91bde316d4e7e8ec396849719edbb34d0e02d31afd2c5d55a2c92bc162bf5efb81f22aed64ed270d0e039d91f0407490fdbb79719babf91a34653ff4844ef813
+MISC ChangeLog 36450 SHA256 5917c82a98fc44e883b3c80f1a378dc05ebd7d5ef16ce1bae8ee7dbe07f3398e SHA512 61307f82d47e8b8336bab701048e4446b5b4b0f2e41367a2f99dec246eec7559561373dd6627e8ee341a7045f8d57feeb0f6b74ccd1ee588698904159dc2b146 WHIRLPOOL fbdd9f732d61883f39180e993a4035b0a2c94b82e613021ce0761521ad5a6112779fec9c1fda6fe42a7971c006cacd4a95edb733a92a0e326bac2cca464ff41a
 MISC metadata.xml 2787 SHA256 22dc7b91c98fb4258271cc9cd4bd99f214b30f258bbdfea83dc37ac74df8d498 SHA512 4fca0d2551a889e7800c688077adf405697d05730bf66621ac53fdefeeeaddb7a8d868973edc9a6fe48e9a07734f1d43fd88229bae693fe181a7dbb95eeb9481 WHIRLPOOL 6284033d40bef02510f924ec1e6a9d3e1072bf26945fdedde0ddaf1d6d35c3d30971cdefa583a8e4d9db3da67bee04145ace15ded4cee63f534588b66633c76b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUpB9PAAoJELp701BxlEWfgYwQAKi4cx9vFID+qATKdOmZq8sx
-YLVcNCocsZXyFABpzBOCqlG0M63j518bHeEl9FBVyOES2Uq2sjSfYWSrCOPZQCah
-wDXNTeWW+gGFVc/LfEtHqmTTT/IECLwGybiVcx3PqYng4CbJ+0eJ44vqNN0uVWo0
-R11RbakilwbegMoQ35i3E338dkwXWHzadL5e3VrK+KcLY1afSxUTrmj2SNKK6HXz
-wLfDW4xAyippYxIxdXf1FUY5t2w/jKU49a8Oi4pcXU2QSswV+Re7Ex7HaLe9bdd0
-etg7oOAjDCh+Qk5XFty6fA7FBZKRrZOyy4GPfl684kjsa1c1kai6I8KK8mMDZzAu
-XgHgVwKSpgxG/VBKQKGxfx7pZCgiNLE5obDL6TKSkbfdiLos95DZDAnmkgyUjmUi
-2Vi4NXC/y5ohzOWvuk+pRJZAq6zlUB9DQLxDWL1CZcMiZ4c9mJFgce3utTfBX49L
-aFVyXCoT+NsT5fV7N254SuqVjpK/efQ3y0MumoueM2z3S17TF+fbgC8eyHqvpRRD
-whT4dIZxbhgpUfKBBYrEerGvQbSIs/BPaI1JwCEK5qMNnKGLyzyfVf2TL6dD40HD
-FbfN2gVEoYHrRvvYNPliguR79NK8aeMZgXbp/GSDxAMQWUcJkuEhMIkQcj8UocCN
-lIGy3Z9C6n1rXQ/d5a7z
-=VMWv
+iEYEAREIAAYFAlSls80ACgkQkKaRLQcq0GIuGwCgq+vC1Wh+xSeTfQ/za1YirFkx
+SzAAn1XmIjquYHsAvvk1bbdTC49znpE+
+=LI7G
 -----END PGP SIGNATURE-----
