@@ -1,6 +1,9 @@
 # ChangeLog for sys-devel/llvm
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/llvm/ChangeLog,v 1.216 2014/12/31 16:07:42 ago Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/llvm/ChangeLog,v 1.217 2015/01/01 20:53:32 maekke Exp $
+
+  01 Jan 2015; Markus Meier <maekke@gentoo.org> llvm-3.5.0.ebuild:
+  arm stable, bug #530882
 
   31 Dec 2014; Agostino Sarubbo <ago@gentoo.org> llvm-3.5.0.ebuild:
   Stable for ppc, wrt bug #530882
